force-app/main/default/objects/RateCardAttribute__c/RateCardAttribute__c.object-meta.xml
<CustomObject>
    <label>Rate Card Attribute</label>
    <nameField>
        <label>Rate Card Attribute</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Card Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>