force-app/main/default/objects/RateCardAttribute__c/fields/AttributeGroupId__c.field-meta.xml
<CustomField>
    <fullName>AttributeGroupId__c</fullName>
    <label>Attribute Group</label>
    <referenceTo>RateCardAttributeGroup__c</referenceTo>
    <relationshipLabel>Attributes</relationshipLabel>
    <relationshipName>RateCardAttributes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>